--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<body>
 <head>
-    <title>
-        Test
-    </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=divice-width, initial-scale=1.0">
+  <title>Sara M. Tague</title>
+  <meta name="discription" content="Links to Sara M. Tagues weekly Assignments for WDD 230">
+  <link href="css/main.css" rel="stylesheet">
 </head>
-<h1>Test</h1>
-<p>My first paragraph.</p>
+<body>
+  <header>
+    <h1>Sara m. Tague</h1>
+  </header>
+  <nav>
+    <ul>
+      <li> href="Lesson 02">Lesson 02</li>a></li>
+      <li> href="Lesson 03">Lesson 03</li>a></li>
+      <li> href="Lesson 04">Lesson 04</li>a></li>
+      <li> href="Lesson 05">Lesson 05</li>a></li>
+      <li> href="Lesson 06">Lesson 06</li>a></li>
+      <li> href="Lesson 07">Lesson 07</li>a></li>
+      <li> href="Lesson 08">Lesson 08</li>a></li>
+      <li> href="Lesson 09">Lesson 09</li>a></li>
+      <li> href="Lesson 10">Lesson 10</li>a></li>
+      <li> href="Lesson 11">Lesson 11</li>a></li>
+    </ul>
+  </nav>
+  <main>
+    <section>
+      <h2>WDD 230: Assignment Portal</h2>
+    </section>
 
+
+  </main>
+  <footer>
+
+  </footer>
 </body>
 </html>
