--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <header>
+    <img src="images/sara-m-tague.png" alt="Image of Sara Tague">
     <h1>Sara m. Tague</h1>
   </header>
   <nav>
