more changes made

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
   <meta name="viewport" content="width=divice-width, initial-scale=1.0">
   <title>Sara M. Tague</title>
   <meta name="discription" content="Links to Sara M. Tagues weekly Assignments for WDD 230">
-  <link href="css/main.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css" >
+  <script defer src="js/dates.js"></script>
 </head>
 <body>
   <header>
     <img src="images/sara-m-tague.png" alt="Image of Sara Tague">
     <h1>Sara m. Tague</h1>
   </header>
+  <main>
+    <section>
+      <h2>WDD 230: Assignment Portal</h2>
+    </section>
+  </main>
   <nav>
     <ul>
       <li> href="Lesson 02">Lesson 02</li>a></li>
@@ -26,14 +32,9 @@
       <li> href="Lesson 11">Lesson 11</li>a></li>
     </ul>
   </nav>
-  <main>
-    <section>
-      <h2>WDD 230: Assignment Portal</h2>
-    </section>
-
-
-  </main>
   <footer>
+    &copy; 2022 | Sara M. Tague | Texas
+    <p id="lastmod">argf</p>
 
   </footer>
 </body>
