--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=divice-width, initial-scale=1.0">
   <title>Sara M. Tague</title>
-  <meta name="discription" content="Links to Sara M. Tagues weekly Assignments for WDD 230">
+  <meta name="discription" content="Links to Sara M. Tagues weekly Assignments for WDD 230: Web Frontend Development at Brigham Young University - Idaho">
   <link rel="stylesheet" href="css/main.css" >
   <script defer src="js/dates.js"></script>
 </head>
@@ -20,22 +20,21 @@
   </main>
   <nav>
     <ul>
-      <li> href="Lesson 02">Lesson 02</li>a></li>
-      <li> href="Lesson 03">Lesson 03</li>a></li>
-      <li> href="Lesson 04">Lesson 04</li>a></li>
-      <li> href="Lesson 05">Lesson 05</li>a></li>
-      <li> href="Lesson 06">Lesson 06</li>a></li>
-      <li> href="Lesson 07">Lesson 07</li>a></li>
-      <li> href="Lesson 08">Lesson 08</li>a></li>
-      <li> href="Lesson 09">Lesson 09</li>a></li>
-      <li> href="Lesson 10">Lesson 10</li>a></li>
-      <li> href="Lesson 11">Lesson 11</li>a></li>
+      <li><a href="lesson-02">Lesson 02</a>Title</li>
+      <li><a href="lesson-03">Lesson 03</a>Title</li>
+      <li><a href="lesson-04">Lesson 04</a>Title</li>
+      <li><a href="lesson-05">Lesson 05</a>Title</li>
+      <li><a href="lesson-06">Lesson 06</a>Title</li>
+      <li><a href="lesson-07">Lesson 07</a>Title</li>
+      <li><a href="lesson-08">Lesson 08</a>Title</li>
+      <li><a href="lesson-09">Lesson 09</a>Title</li>
+      <li><a href="lesson-10">Lesson 10</a>Title</li>
+      <li><a href="lesson-11">Lesson 11</a>Title</li>
     </ul>
   </nav>
   <footer>
     &copy; 2022 | Sara M. Tague | Texas
     <p id="lastmod">argf</p>
-
   </footer>
 </body>
 </html>
