--- a/index.html
+++ b/index.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=divice-width, initial-scale=1.0">
-  <title>Sara M. Tague</title>
-  <meta name="discription" content="Links to Sara M. Tagues weekly Assignments for WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-  <link rel="stylesheet" href="css/main.css" >
-  <script defer src="js/dates.js"></script>
-</head>
-<body>
-  <header>
-    <img src="images/sara-m-tague.png" alt="Image of Sara Tague">
-    <h1>Sara m. Tague</h1>
-  </header>
-  <main>
-    <section>
-      <h2>WDD 230: Assignment Portal</h2>
-    </section>
-  </main>
-  <nav>
-    <ul>
-      <li><a href="lesson-02">Lesson 02</a>Title</li>
-      <li><a href="lesson-03">Lesson 03</a>Title</li>
-      <li><a href="lesson-04">Lesson 04</a>Title</li>
-      <li><a href="lesson-05">Lesson 05</a>Title</li>
-      <li><a href="lesson-06">Lesson 06</a>Title</li>
-      <li><a href="lesson-07">Lesson 07</a>Title</li>
-      <li><a href="lesson-08">Lesson 08</a>Title</li>
-      <li><a href="lesson-09">Lesson 09</a>Title</li>
-      <li><a href="lesson-10">Lesson 10</a>Title</li>
-      <li><a href="lesson-11">Lesson 11</a>Title</li>
-    </ul>
-  </nav>
-  <footer>
-    &copy; 2022 | Sara M. Tague | Texas
-    <p id="lastmod">argf</p>
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sara M. Tague</title>
+    <meta
+      name="discription"
+      content="Links to Sara M. Tagues weekly Assignments for WDD 230: Web Frontend Development at Brigham Young University - Idaho"
+    />
+    <link rel="stylesheet" href="css/main.css" />
+    <script defer src="js/dates.js"></script>
+  </head>
+  <body>
+    <header>
+      <img src="images/optimized-sara-m-tague.png" alt="Image of Sara Tague" />
+      <h1>Sara M. Tague</h1>
+    </header>
+    <main>
+      <section>
+        <h2>WDD 230: Assignment Portal</h2>
+      </section>
+    </main>
+    <nav>
+      <ul>
+        <li><a href="lesson-02">Lesson 02</a>Title</li>
+        <li><a href="lesson-03">Lesson 03</a>Title</li>
+        <li><a href="lesson-04">Lesson 04</a>Title</li>
+        <li><a href="lesson-05">Lesson 05</a>Title</li>
+        <li><a href="lesson-06">Lesson 06</a>Title</li>
+        <li><a href="lesson-07">Lesson 07</a>Title</li>
+        <li><a href="lesson-08">Lesson 08</a>Title</li>
+        <li><a href="lesson-09">Lesson 09</a>Title</li>
+        <li><a href="lesson-10">Lesson 10</a>Title</li>
+        <li><a href="lesson-11">Lesson 11</a>Title</li>
+      </ul>
+    </nav>
+    <footer>
+      &copy; 2022 | Sara M. Tague | Texas
+      <p id="lastmod"></p>
+    </footer>
+  </body>
 </html>
