--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sara M. Tague</title>
+    <title>Sara Tague's Assignment Portal</title>
     <meta
       name="discription"
       content="Links to Sara M. Tagues weekly Assignments for WDD 230: Web Frontend Development at Brigham Young University - Idaho"
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="css/main.css" />
     <script defer src="js/dates.js"></script>
   </head>
-  <body>
-    <header>
-      <img src="images/optimized-sara-m-tague.png" alt="Image of Sara Tague" />
+  <body class=>
+    <header class="intro-banner">
+      <img src="images/family-photo-with-new-baby.jpg" alt="Image of Sara Tague" class=family-pic/>
       <h1>Sara M. Tague</h1>
     </header>
     <main>
@@ -23,16 +23,16 @@
     </main>
     <nav>
       <ul>
-        <li><a href="lesson-02">Lesson 02</a>Title</li>
-        <li><a href="lesson-03">Lesson 03</a>Title</li>
-        <li><a href="lesson-04">Lesson 04</a>Title</li>
-        <li><a href="lesson-05">Lesson 05</a>Title</li>
-        <li><a href="lesson-06">Lesson 06</a>Title</li>
-        <li><a href="lesson-07">Lesson 07</a>Title</li>
-        <li><a href="lesson-08">Lesson 08</a>Title</li>
-        <li><a href="lesson-09">Lesson 09</a>Title</li>
-        <li><a href="lesson-10">Lesson 10</a>Title</li>
-        <li><a href="lesson-11">Lesson 11</a>Title</li>
+        <li>Lesson 02: <a href="#">Title</a></li>
+        <li>Lesson 03: <a href="#">Title</a></li>
+        <li>Lesson 04: <a href="#">Title</a></li>
+        <li>Lesson 05: <a href="#">Title</a></li>
+        <li>Lesson 06: <a href="#">Title</a></li>
+        <li>Lesson 07: <a href="#">Title</a></li>
+        <li>Lesson 08: <a href="#">Title</a></li>
+        <li>Lesson 09: <a href="#">Title</a></li>
+        <li>Lesson 10: <a href="#">Title</a></li>
+        <li>Lesson 11: <a href="#">Title</a></li>
       </ul>
     </nav>
     <footer>
