--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="css/main.css" />
     <script defer src="js/dates.js"></script>
   </head>
-  <body class=>
-    <header class="intro-banner">
-      <img src="images/family-photo-with-new-baby.jpg" alt="Image of Sara Tague" class=family-pic/>
-      <h1>Sara M. Tague</h1>
+  <body class="body-of-index">
+    <header >
+      <img src="images/family-photo-with-new-baby.jpg" alt="Image of Sara Tague" class="family-pic"/>
+      <h1 class="intro-banner-heading">Sara M. Tague</h1>
     </header>
     <main>
       <section>
