--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sara Tague's Assignment Portal</title>
+    <title>Sara M. Tague's Assignment Portal</title>
     <meta
       name="discription"
       content="Links to Sara M. Tagues weekly Assignments for WDD 230: Web Frontend Development at Brigham Young University - Idaho"
@@ -12,8 +12,12 @@
     <script defer src="js/dates.js"></script>
   </head>
   <body class="body-of-index">
-    <header >
-      <img src="images/family-photo-with-new-baby.jpg" alt="Image of Sara Tague" class="family-pic"/>
+    <header>
+      <img
+        src="images/family-photo-with-new-baby.jpg"
+        alt="Family picture with the new baby"
+        class="family-pic"
+      />
       <h1 class="intro-banner-heading">Sara M. Tague</h1>
     </header>
     <main>
@@ -22,6 +26,7 @@
       </section>
     </main>
     <nav>
+      <hr />
       <ul>
         <li>Lesson 02: <a href="#">Title</a></li>
         <li>Lesson 03: <a href="#">Title</a></li>
