--- a/index.html
+++ b/index.html
@@ -2,13 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
     <title>Sara M. Tague's Assignment Portal</title>
     <meta
       name="discription"
       content="Links to Sara M. Tagues weekly Assignments for WDD 230: Web Frontend Development at Brigham Young University - Idaho"
     />
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/medium.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap"
+      rel="stylesheet"
+    />
     <script defer src="js/dates.js"></script>
   </head>
   <body class="body-of-index">
