--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       content="Links to Sara M. Tagues weekly Assignments for WDD 230: Web Frontend Development at Brigham Young University - Idaho"
     />
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap"
@@ -27,7 +27,7 @@
         alt="Family picture with the new baby"
         class="family-pic"
       />
-      <h1 class="intro-banner-heading">Sara M. Tague</h1>
+      <h1>Sara M. Tague</h1>
     </header>
     <main>
       <section>
