updates for week 2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <title>Sara M. Tague's Assignment Portal</title>
     <meta
-      name="discription"
+      name="description"
       content="Links to Sara M. Tagues weekly Assignments for WDD 230: Web Frontend Development at Brigham Young University - Idaho"
     />
     <link rel="stylesheet" href="css/normalize.css" />
@@ -37,7 +37,7 @@
     <nav>
       <hr />
       <ul>
-        <li>Lesson 02: <a href="#">Title</a></li>
+        <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
         <li>Lesson 03: <a href="#">Title</a></li>
         <li>Lesson 04: <a href="#">Title</a></li>
         <li>Lesson 05: <a href="#">Title</a></li>
@@ -50,7 +50,7 @@
       </ul>
     </nav>
     <footer>
-      &copy; 2022 | Sara M. Tague | Texas
+      &copy; <span id="year">year</span> | Sara M. Tague | Texas
       <p id="lastmod"></p>
     </footer>
   </body>
