--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -12,8 +12,8 @@
       content="W02 Assignment: Design Principles Document"
     />
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="lesson2/small.css" />
-    <link rel="stylesheet" href="leaaon2/medium.css" />
+    <link rel="stylesheet" href="css/small.css" />
+    <link rel="stylesheet" href="css/medium.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap"
       rel="stylesheet"
@@ -27,28 +27,43 @@
     </header>
     <main>
       <div id="home_link">
-        <a href="../index.html">Home</a>
+        <a href="../index.html">back</a>
       </div>
       <article>
         <h3>White Space and Clean Design</h3>
-        <p>https://www.etq-amsterdam.com/</p>
-        <p>ETQ</p>
+        <h4>ETQ</h4>
+        <a href="https://www.etq-amsterdam.com/" target="_blank"
+          >ETQ Home Page</a
+        >
         <p>words and stuff.</p>
-        <img src="../lesson2/images/etq-phone-view.jpg" alt="Screenshot of the etp website">
+        <img
+          src="../lesson2/images/etq-phone-view.jpg"
+          alt="Screenshot of the etp website"
+        />
       </article>
       <article>
-        <h3>White Space and Clean Design</h3>
-        <p>https://www.julianabicycles.com/en-US</p>
-        <p>JULUANA</p>
+        <h3>PARC: Proximity</h3>
+        <h4>JULUANA</h4>
+        <a href="https://www.julianabicycles.com/en-US" target="_blank"
+          >JULUANA Home Page</a
+        >
         <p>words and stuff.</p>
-        <img src="../lesson2/images/juluana-phone-view.jpg" alt="Screenshot of the Juluana website">
+        <img
+          src="../lesson2/images/juluana-phone-view.jpg"
+          alt="Screenshot of the Juluana website"
+        />
       </article>
       <article>
-        <h3>White Space and Clean Design</h3>
-        <p>http://www.impossible-bureau.com/</p>
-        <p>Imposible Bureau</p>
+        <h3>Fitt's Law</h3>
+        <h4>IMPOSIBLE BUREAU</h4>
+        <a href="http://www.impossible-bureau.com/" target="_blank"
+          >IMPOSIBLE BUREAU Home Page</a
+        >
         <p>words and stuff.</p>
-        <img src="../lesson2/images/imposible-phone-view.jpg" alt="Screenshot of the Imposible Bureau website">
+        <img
+          src="../lesson2/images/imposible-phone-view.jpg"
+          alt="Screenshot of the Imposible Bureau website"
+        />
       </article>
     </main>
     <nav></nav>
