Updates  for week 2

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -11,60 +11,91 @@
       name="description"
       content="W02 Assignment: Design Principles Document"
     />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/small.css" />
-    <link rel="stylesheet" href="css/medium.css" />
+    <link rel="stylesheet" href="../css/normalize.css" />
+    <link rel="stylesheet" href="../lesson2/small.css" />
+    <link rel="stylesheet" href="../lesson2/medium.css" />
+    <link rel="stylesheet" href="../lesson2/large.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap"
       rel="stylesheet"
     />
-    <script defer src="js/dates.js"></script>
+    <script defer src="../js/dates.js"></script>
   </head>
   <body>
     <header>
-      <h1>Design Principles Document</h1>
+      <h1>DESIGN PRINCIPLES DOCUMENT</h1>
       <h2>Sara M. Tague</h2>
+      <div class= "link-0" id="home_link">
+        <a href="../index.html">BACK</a>
+      </div>
     </header>
     <main>
-      <div id="home_link">
-        <a href="../index.html">back</a>
-      </div>
-      <article>
+      <section>
         <h3>White Space and Clean Design</h3>
         <h4>ETQ</h4>
-        <a href="https://www.etq-amsterdam.com/" target="_blank"
-          >ETQ Home Page</a
-        >
-        <p>words and stuff.</p>
         <img
           src="../lesson2/images/etq-phone-view.jpg"
           alt="Screenshot of the etp website"
+          class="etq-pic"
         />
-      </article>
-      <article>
+        <p>
+          The ETQ website sells shoes and their website is extremely clean and
+          uses white space to its advantage.
+          <br />
+          On the home page as you see captured in the image above you can see a
+          snippet of the clan design they have used.
+          <br />
+          One thing that really makes a difference in this site is that they
+          went the extra mile to make not only the site and design clean but
+          also all the images on the site are very clean looking, match each
+          other, and use white space.
+        </p>
+        <a class="link-1" href="https://www.etq-amsterdam.com/" target="_blank"
+        >ETQ Home Page</a
+      >
+      </section>
+      <section>
         <h3>PARC: Proximity</h3>
         <h4>JULUANA</h4>
-        <a href="https://www.julianabicycles.com/en-US" target="_blank"
-          >JULUANA Home Page</a
-        >
-        <p>words and stuff.</p>
         <img
           src="../lesson2/images/juluana-phone-view.jpg"
           alt="Screenshot of the Juluana website"
+          class="juluana-pic"
         />
-      </article>
-      <article>
+        <p>
+          Good use of proximity is really important in a website and the Juluana
+          site has good use of proximity.
+          <br />
+          You can't tell as much from this one screenshot but as you scroll
+          through this bike site everything is spaced out perfectly and all the
+          elements and titles that go with each other are spaced in such a way
+          that your mind automatically know they go together.
+        </p>
+        <a class="link-2" href="https://www.julianabicycles.com/en-US" target="_blank"
+        >JULUANA Home Page</a
+      >
+      </section>
+      <section>
         <h3>Fitt's Law</h3>
         <h4>IMPOSIBLE BUREAU</h4>
-        <a href="http://www.impossible-bureau.com/" target="_blank"
-          >IMPOSIBLE BUREAU Home Page</a
-        >
-        <p>words and stuff.</p>
         <img
           src="../lesson2/images/imposible-phone-view.jpg"
           alt="Screenshot of the Imposible Bureau website"
+          class="imposible-pic"
         />
-      </article>
+        <p>
+          The Imposible Bureau site is a great example of Fit's Law because it's
+          full of really interactive designs and features.
+          <br />
+          The loading screen alone has a really cool effect where the colors
+          change when the mouse moves, and when you go to the other pages in the
+          site there are more effects that draw the viewer in and keep them
+          interested.
+        </p>
+        <a class="link-3" href="http://www.impossible-bureau.com/" target="_blank"
+        >IMPOSIBLE BUREAU Home Page</a
+      >
+      </section>
     </main>
     <nav></nav>
     <footer>
