--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -49,11 +49,29 @@
         their businesses to be advertised with residents. The site will also
         help local Allen residents find the businesses they are looking for.
       </p>
-      <img
-        src="images/localbusiness.jpg"
-        alt="Graphic of Local Businsses"
-        class="local"
-      />
+      <h2>Personas</h2>
+      <p>
+        <strong>Frank: Local business owner</strong><br />
+        Owns a bike shop. <br />
+        Is a family man. <br />
+        <strong>Franks Goal</strong><br />
+        To get more people to use and recognize his business.
+      </p>
+      <p>
+        <strong>Mary: A local school teacher</strong><br />
+        Mary works at the local elemetry school. <br />
+        <strong>Marys Goal</strong><br />
+        Mary wants to use the Allen Chamber of Commerce site to find local
+        workers and business men to come and talk to her class. <br />
+    
+      </p>
+      <h3>Scenarios</h3>
+      <p>Different scenarios for why people could be going to the Allen chamber of commerse site couold include many different things. Some of those reasons are as follows. <br>
+      - Looking for a spesifec business. <br>
+      - Trying to sell your product to local businesses. <br>
+     - Looking for fun things to do in Allen. <br>
+      - Looking for discounts and sales going on. <br>
+      </p>
     </main>
 
     <footer>
