--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -6,10 +6,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
-    <title>Lesson 3: Site Plan</title>
+    <title>Allen Chamber of Commerce Site Plan</title>
     <meta
       name="description"
-      content="Week 3 assignment: Site plan for the Chamber of Commerce Site"
+      content="Allen Chamber of Commerce Site Plan - Week 3 Project"
     />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="../lesson3/css/small.css" />
@@ -22,6 +22,7 @@
   </head>
   <body>
     <header>
+      <h1>Allen Chamber of Commerce Site Plan</h1>
       <div id="logo">
         <img
           src="images/allen-logo-white.png"
@@ -38,9 +39,9 @@
       </nav>
     </header>
     <main>
-      <h1>Chamber of Commerce Site Plan</h1>
+      <h2>Chamber of Commerce Site Plan</h2>
       <hr />
-      <h2>Site Name</h2>
+      <h3>Site Name</h3>
       <p>allenchamberofcommerce.com</p>
 
       <h3>Site Purpose</h3>
@@ -83,7 +84,7 @@
 
     <footer>
       &copy; 2022 | Sara M. Tague | Texas <br />
-      Contact: saramatheney@gmail.com | Link to google maps
+      saramatheney@gmail.com | Link to google maps
     </footer>
   </body>
 </html>
