--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <header>
+      <h1>Allen Chamber of Commerce Site Plan</h1>
       <div id="logo">
         <img
           src="images/allen-logo-white.png"
@@ -39,7 +40,7 @@
     </header>
 
     <main>
-      <h1>Target Audience</h1>
+      <h2>Target Audience</h2>
       <hr />
       <p>
         The audience for the Chamber of Commerce Site is anyone who is looking
@@ -48,7 +49,7 @@
         their businesses to be advertised with residents. The site will also
         help local Allen residents find the businesses they are looking for.
       </p>
-      <h2>Personas</h2>
+      <h3>Personas</h3>
       <p>
         <strong>Frank: Local business owner</strong><br />
         Owns a bike shop. <br />
@@ -75,7 +76,7 @@
 
     <footer>
       &copy; 2022 | Sara M. Tague | Texas <br />
-      Contact: saramatheney@gmail.com | Link to google maps
+      saramatheney@gmail.com | Link to google maps
     </footer>
   </body>
 </html>
