--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <header>
+      <h1>Allen Chamber of Commerce Site Plan</h1>
       <div id="logo">
         <img
           src="images/allen-logo-white.png"
@@ -39,9 +40,9 @@
     </header>
 
     <main>
-      <h1>Typography</h1>
+      <h2>Typography</h2>
       <hr />
-      <h2>Font Used</h2>
+      <h3>Font Used</h3>
       <p>
         <strong>Hind:</strong> Designed by Indian Type Foundry <br />
         <br />
