--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <header>
+      <h1>Allen Chamber of Commerce Site Plan</h1>
       <div id="logo">
         <img
           src="images/allen-logo-white.png"
@@ -39,7 +40,7 @@
     </header>
 
     <main>
-      <h1>Color Scheme</h1>
+      <h2>Color Scheme</h2>
       <hr />
       <p>
         I chose these colors because they are popular and they work well
@@ -65,7 +66,7 @@
 
     <footer>
       &copy; 2022 | Sara M. Tague | Texas <br />
-      Contact: saramatheney@gmail.com | Link to google maps
+      saramatheney@gmail.com | Link to google maps
     </footer>
   </body>
 </html>
