--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
@@ -24,10 +24,7 @@
     <header>
       <h1>Allen Chamber of Commerce Site Plan</h1>
       <div id="logo">
-        <img
-          src="images/allen-logo-white.png"
-          alt="Allen Logo"
-        />
+        <img src="images/allen-logo-white.png" alt="Allen Logo" />
       </div>
       <nav class="top-nav">
         <ul>
@@ -63,14 +60,16 @@
         <strong>Marys Goal</strong><br />
         Mary wants to use the Allen Chamber of Commerce site to find local
         workers and business men to come and talk to her class. <br />
-    
       </p>
       <h3>Scenarios</h3>
-      <p>Different scenarios for why people could be going to the Allen chamber of commerse site couold include many different things. Some of those reasons are as follows. <br>
-      - Looking for a spesifec business. <br>
-      - Trying to sell your product to local businesses. <br>
-     - Looking for fun things to do in Allen. <br>
-      - Looking for discounts and sales going on. <br>
+      <p>
+        Different scenarios for why people could be going to the Allen chamber
+        of commerse site couold include many different things. Some of those
+        reasons are as follows. <br />
+        - Looking for a spesifec business. <br />
+        - Trying to sell your product to local businesses. <br />
+        - Looking for fun things to do in Allen. <br />
+        - Looking for discounts and sales going on. <br />
       </p>
     </main>
 
