--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
@@ -24,10 +24,7 @@
     <header>
       <h1>Allen Chamber of Commerce Site Plan</h1>
       <div id="logo">
-        <img
-          src="images/allen-logo-white.png"
-          alt="Allen Logo"
-        />
+        <img src="images/allen-logo-white.png" alt="Allen Logo" />
       </div>
       <nav class="top-nav">
         <ul>
