--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,10 +29,10 @@
       </div>
       <nav class="top-nav">
         <ul>
-          <li><a href="css/">Home</a></li>
-          <li><a href="">Target</a></li>
-          <li><a href="../lesson3/typography.html">Typography</a></li>
-          <li><a href="../lesson3/color-scheme.html">Color</a></li>
+          <li><a href="css/">Discover</a></li>
+          <li><a href="">Directory</a></li>
+          <li><a href="../lesson3/typography.html">Join</a></li>
+          <li><a href="../lesson3/color-scheme.html">Contact</a></li>
         </ul>
       </nav>
     </header>
