--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -12,9 +12,9 @@
       content="Allen Chamber of Commerce Site Plan - Week 3 Project"
     />
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="../lesson3/css/small.css" />
-    <link rel="stylesheet" href="../lesson3/css/medium.css" />
-    <link rel="stylesheet" href="../lesson3/css/large.css" />
+    <link rel="stylesheet" href="css/small.css" />
+    <link rel="stylesheet" href="css/medium.css" />
+    <link rel="stylesheet" href="css/large.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Hind:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -28,10 +28,10 @@
       </div>
       <nav class="top-nav">
         <ul>
-          <li><a href="../lesson3/index.html">Home</a></li>
-          <li><a href="../lesson3/target-audience.html">Target</a></li>
-          <li><a href="../lesson3/typography.html">Typography</a></li>
-          <li><a href="../lesson3/color-scheme.html">Color</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="target-audience.html">Target</a></li>
+          <li><a href="typography.html">Typography</a></li>
+          <li><a href="color-scheme.html">Color</a></li>
         </ul>
       </nav>
     </header>
