--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,6 +32,7 @@
           ><img class="icons" src="images/linkenin-icon.png" target="_blank"
         /></a>
       </div>
+
       <nav>
         <ul class="navigation responsive">
           <li><a href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
@@ -42,19 +43,25 @@
         </ul>
         <span id="displayDateTime"></span>
       </nav>
+
+      <date></date>
+
       <script id="rendered-js">
-        _;
       </script>
+
+
     </header>
     <main>
-      <div class="event">Event</div>
-      <div class="weather">Weather</div>
+      <div class="callToAction">Hero with site name and call to action </div>
+      <div class="event">Event </div>
+      <div class="weather">Weather </div>
+      <div class="news">News Release </div>
+      <div class="spotLights">
+      <div class="spotLight1">SpotLight 1</div>
+      <div class="spotLight2">SpotLight 2</div>
+      <div class="spotLight3">SpotLight 3</div>
+      </div>
       <div class="join">Join</div>
-      <div class="hero">Hero With Site image and call to action</div>
-      <div class="news">News Release</div>
-      <div class="spot1">Spotlight1</div>
-      <div class="spot2">Spotlight2</div>
-      <div class="spot3">Spotlight3</div>
     </main>
 
     <footer>
@@ -80,5 +87,5 @@
       <p id="lastmod"></p>
     </footer>
   </body>
-  <script src="js/navigation.js" defer></script>
+  <script src="js/script.js" defer></script>
 </html>
