--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,20 +46,17 @@
 
       <date></date>
 
-      <script id="rendered-js">
-      </script>
-
-
+      <script id="rendered-js"></script>
     </header>
     <main>
-      <div class="callToAction">Hero with site name and call to action </div>
-      <div class="event">Event </div>
-      <div class="weather">Weather </div>
-      <div class="news">News Release </div>
+      <div class="callToAction">Hero with site name and call to action</div>
+      <div class="event">Event</div>
+      <div class="weather">Weather</div>
+      <div class="news">News Release</div>
       <div class="spotLights">
-      <div class="spotLight1">SpotLight 1</div>
-      <div class="spotLight2">SpotLight 2</div>
-      <div class="spotLight3">SpotLight 3</div>
+        <div class="spotLight1">SpotLight 1</div>
+        <div class="spotLight2">SpotLight 2</div>
+        <div class="spotLight3">SpotLight 3</div>
       </div>
       <div class="join">Join</div>
     </main>
@@ -87,5 +84,5 @@
       <p id="lastmod"></p>
     </footer>
   </body>
-  <script src="js/script.js" defer></script>
+  <script src="js/navigation.js" defer></script>
 </html>
