--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       name="description"
       content="Links to Sara M. Tagues weekly Assignments for WDD 230: Web Frontend Development at Brigham Young University - Idaho"
     />
+    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
@@ -37,8 +38,13 @@
     <nav>
       <hr />
       <ul>
-        <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
-        <li>Lesson 03: <a href="lesson3/index.html">Website Planning Document</a></li>
+        <li>
+          Lesson 02:
+          <a href="lesson2/design-principles.html">Design Principles</a>
+        </li>
+        <li>
+          Lesson 03: <a href="lesson3/index.html">Website Planning Document</a>
+        </li>
         <li>Lesson 04: <a href="chamber/index.html">Chamber of Commerce</a></li>
         <li>Lesson 05: <a href="#">Title</a></li>
         <li>Lesson 06: <a href="#">Title</a></li>
