--- a/chamber2/index.html
+++ b/chamber2/index.html
@@ -13,9 +13,11 @@
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
     <link rel="stylesheet" href="css/large.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Hind:wght@400;500;700&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Hind:wght@400;500;700&display=swap"
     />
     <script defer src="js/dates.js"></script>
   </head>
@@ -45,7 +47,7 @@
         <span id="displayDateTime"></span>
       </nav>
 
-      <date></date>
+      <time></time>
 
       <script id="rendered-js"></script>
     </header>
