--- a/chamber/index.html
+++ b/chamber/index.html
@@ -55,16 +55,16 @@
       <div class="today"><date></date></div>
     </header>
     <main>
-
       <section class="callToAction">
-        <h2> Welcom to Allen Texas! </h2>
+        <h2>Welcom to Allen Texas!</h2>
         <img
           src="images/bluebonnets.jpg"
           alt="Texas state flower the bluebonnet"
         />
-        <button type="button" class="join-button"> Click here to join the chamber</button>
-    </section>
-
+        <button type="button" class="join-button">
+          Click here to join the chamber
+        </button>
+      </section>
 
       <div class="event">
         Grand Opening<br />
@@ -75,18 +75,54 @@
 
       <div class="weather"><strong>Weather</strong></div>
 
-      <div class="news"><strong>Allen News</strong></div>
+      <div class="news">
+        <strong>Allen News</strong><br />Lorem ipsum dolor sit amet, consectetur
+        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+        qui officia deserunt mollit anim id est laborum.<br />
+      </div>
 
       <div class="spotLights">
-        <div class="spotLight1">SpotLight 1</div>
+        <div class="spotLight1">
+          <strong>Local Moving Company</strong><br />
+          <img src="images/truck.png" alt="Moving truck" />
+          <br />
+          If you or someone you know needs help moving then we know the perfect
+          people to help! <br />
+          To learn more please contact 469-218-5339
+        </div>
 
-        <div class="spotLight2">SpotLight 2</div>
+        <div class="spotLight2">
+          <strong>Weekly Farmers Market</strong><br />
+          <img src="images/market-farm.png" alt="Market booth" />
+          <br />
+          Come and get some fresh fruits and veggies among other things at our
+          local farmers market! <br />
+          Come and see for yourself evey Tue & Fri from 7-11 a.m. outside the
+          cocal library
+        </div>
 
-        <div class="spotLight3">SpotLight 3</div>
-
+        <div class="spotLight3">
+          <strong>24/7 Handyman Service</strong><br />
+          <img src="images/tools.png" alt="Toolbox" /><br />
+          We know it's frustraiting to have a burst pipe or your air
+          conditioning go out at a bad time. But don't worry, our local handyman
+          is avalible 24/7. You can contact him at 468-844-3936
+        </div>
       </div>
-      <div class="join"><strong>Join Us!</strong></div>
-      
+
+
+
+      <div class="join">
+
+        <button>Join Us!</button>
+        <br />
+        Discover how to join the Allen Chamber of Commerce and discover the
+        benefits for you, and your organization!
+      </div>
     </main>
 
     <footer>
