--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,9 +24,7 @@
   </head>
   <body>
     <div id="banner">
-      <p>
-        🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.
-      </p>
+      Come join us for the chamber meet and greet Wednesday at 7:00 p.m.
     </div>
     <header>
       <h1>Allen Chamber of Commerce</h1>
@@ -35,10 +33,10 @@
       </div>
       <div class="social-media">
         <a href="https://facebook.com"
-          ><img class="icons" src="images/facebook-icon.png" target="_blank"
+          ><img class="icons" src="images/facebook-icon.png"
         /></a>
         <a href="https://www.linkedin.com"
-          ><img class="icons" src="images/linkenin-icon.png" target="_blank"
+          ><img class="icons" src="images/linkenin-icon.png"
         /></a>
       </div>
 
@@ -76,13 +74,8 @@
       <div class="weather"><strong>Weather</strong></div>
 
       <div class="news">
-        <strong>Allen News</strong><br />Lorem ipsum dolor sit amet, consectetur
-        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-        qui officia deserunt mollit anim id est laborum.<br />
+        <strong>Allen News</strong><br />Work on improvements to Allen Heritage
+        Village are slated for completion by summer 2023.
       </div>
 
       <div class="spotLights">
@@ -90,8 +83,6 @@
           <strong>Local Moving Company</strong><br />
           <img src="images/truck.png" alt="Moving truck" />
           <br />
-          If you or someone you know needs help moving then we know the perfect
-          people to help! <br />
           To learn more please contact 469-218-5339
         </div>
 
@@ -99,25 +90,19 @@
           <strong>Weekly Farmers Market</strong><br />
           <img src="images/market-farm.png" alt="Market booth" />
           <br />
-          Come and get some fresh fruits and veggies among other things at our
-          local farmers market! <br />
-          Come and see for yourself evey Tue & Fri from 7-11 a.m. outside the
-          cocal library
+          Come and visit evey Tue & Fri from 7-11 a.m. outside the cocal
+          library.
         </div>
 
         <div class="spotLight3">
           <strong>24/7 Handyman Service</strong><br />
           <img src="images/tools.png" alt="Toolbox" /><br />
-          We know it's frustraiting to have a burst pipe or your air
-          conditioning go out at a bad time. But don't worry, our local handyman
-          is avalible 24/7. You can contact him at 468-844-3936
+          Our local handyman is avalible 24/7. You can contact him at
+          468-844-3936
         </div>
       </div>
 
-
-
       <div class="join">
-
         <button>Join Us!</button>
         <br />
         Discover how to join the Allen Chamber of Commerce and discover the
@@ -144,7 +129,7 @@
 
       <hr />
       &copy; <span id="year">year</span> | <strong>Sara M. Tague</strong> |
-      Texas | WDD 230
+      Texas
       <p id="lastmod"></p>
     </footer>
   </body>
